# sqloperation-lab2

DataCapsuleProject/backend/: CMakeLists.txt
DataCapsuleProject/backend/datacapsule-env/: pyvenv.cfg
DataCapsuleProject/backend/include/AA_Server/: AAServiceImpl.h
DataCapsuleProject/backend/include/certificateAuthority/: server.h
DataCapsuleProject/backend/include/cloudServer/: server.h
DataCapsuleProject/backend/include/common/: abeKeys.h  aes256.openssl.cpp  aes256.openssl.h  base64.openssl.cpp  base64.openssl.h  computeType.h  encryptAlgType.h  grpcClient.h  serviceAddress.h  signature.openssl.cpp  signature.openssl.h  tools.cpp  tools.h
DataCapsuleProject/backend/include/common/abe/: CPABE_core.cpp  CPABE_serialize.cpp  CPABE_serialize.h
DataCapsuleProject/backend/include/consumer/: Executor.h  Verifier.h  api.h  client.h  compute.h  consumerServer.h
DataCapsuleProject/backend/include/consumer/computeAPI/: dataStatistics.h  databaseOperation.h  modelFinetune.h  officeOperation.h  sqlOperation.h  sql_policy_executor.h
DataCapsuleProject/backend/include/etcdServer/: server.h
DataCapsuleProject/backend/include/gateway/: httplib.h
DataCapsuleProject/backend/include/googleapis/: WORKSPACE
DataCapsuleProject/backend/include/googleapis/google/ai/generativelanguage/v1/: BUILD.bazel  generative_service.proto  generativelanguage_v1.yaml
DataCapsuleProject/backend/include/googleapis/google/ai/generativelanguage/v1beta/: BUILD.bazel  generative_service.proto  generativelanguage_v1beta.yaml  model_service.proto  tuned_model.proto
DataCapsuleProject/backend/include/googleapis/google/analytics/data/v1alpha/: data.proto
DataCapsuleProject/backend/include/googleapis/google/analytics/data/v1beta/: analytics_data_api.proto  data.proto
DataCapsuleProject/backend/include/googleapis/google/api/: quota.proto
DataCapsuleProject/backend/include/googleapis/google/api/cloudquotas/v1/: resources.proto
DataCapsuleProject/backend/include/googleapis/google/bigtable/v2/: feature_flags.proto
DataCapsuleProject/backend/include/googleapis/google/chat/v1/: BUILD.bazel  attachment.proto  chat_service.proto  deletion_metadata.proto  membership.proto  message.proto  reaction.proto  space.proto  space_event.proto
DataCapsuleProject/backend/include/googleapis/google/cloud/aiplatform/: BUILD.bazel
DataCapsuleProject/backend/include/googleapis/google/cloud/aiplatform/v1/: BUILD.bazel  accelerator_type.proto  aiplatform_v1.yaml  api_auth.proto  custom_job.proto  dataset.proto  dataset_service.proto  endpoint.proto  endpoint_service.proto  env_var.proto  evaluated_annotation.proto  evaluation_service.proto  explanation.proto  feature_online_store_admin_service.proto  feature_registry_service.proto  featurestore_online_service.proto  featurestore_service.proto  genai_tuning_service.proto  index_endpoint_service.proto  io.proto  machine_resources.proto  migration_service.proto  model.proto  model_monitoring.proto  notebook_execution_job.proto  notebook_service.proto  openapi.proto  persistent_resource_service.proto  schedule_service.proto  tool.proto  tuning_job.proto  types.proto  vertex_rag_data.proto  vertex_rag_data_service.proto  vertex_rag_service.proto
DataCapsuleProject/backend/include/googleapis/google/cloud/aiplatform/v1beta1/: BUILD.bazel  accelerator_type.proto  aiplatform_v1beta1.yaml  content.proto  endpoint.proto  endpoint_service.proto  evaluation_service.proto  feature.proto  feature_group.proto  feature_monitor.proto  feature_monitor_job.proto  feature_registry_service.proto  feature_view.proto  featurestore_service.proto  io.proto  machine_resources.proto  model_garden_service.proto  notebook_execution_job.proto  notebook_service.proto  persistent_resource.proto  reasoning_engine.proto  reasoning_engine_execution_service.proto  reasoning_engine_service.proto  tool.proto  tuning_job.proto  vertex_rag_data.proto  vertex_rag_service.proto
DataCapsuleProject/backend/include/googleapis/google/cloud/memorystore/: BUILD.bazel
DataCapsuleProject/backend/include/googleapis/google/container/v1/: cluster_service.proto  container_v1.yaml
DataCapsuleProject/backend/include/googleapis/google/iam/v1/: BUILD.bazel  resource_policy_member.proto
DataCapsuleProject/backend/include/googleapis/google/longrunning/: longrunning.yaml
DataCapsuleProject/backend/include/googleapis/google/monitoring/v3/: BUILD.bazel  alert.proto  alert_service.proto  notification.proto  notification_service.proto  snooze.proto
DataCapsuleProject/backend/include/googleapis/google/spanner/v1/: spanner.proto  type.proto
DataCapsuleProject/backend/include/producer/: producer.h
DataCapsuleProject/backend/include/userServer/: password_utils.cpp  password_utils.h  server.h  userdb.conf  userdb.cpp  userdb.h
DataCapsuleProject/backend/keys/: sign.key  user_sk.json
DataCapsuleProject/backend/protos/: serverInteraction.proto
DataCapsuleProject/backend/scripts/: consumer-supervision.md  consumer.service  setup_mysql.sh  setup_openssl.sh  setup_pbc.md
DataCapsuleProject/backend/scripts/lib/: libmysqlcppconn10_9.0.0-1ubuntu24.04_amd64.deb  libmysqlcppconnx2_9.0.0-1ubuntu24.04_amd64.deb
DataCapsuleProject/backend/src/AA_Server/: AA_Server.cpp  main.cpp
DataCapsuleProject/backend/src/certificateAuthority/: main.cpp  server.cpp
DataCapsuleProject/backend/src/cloudServer/: main.cpp  server.cpp
DataCapsuleProject/backend/src/consumer/: Executor.cpp  Verifier.cpp  api.cpp  client.cpp  compute.cpp  consumerServer.cpp  main.cpp
DataCapsuleProject/backend/src/consumer/computeAPI/: dataStatistics.cpp  databaseOperation.cpp  modelFinetune.cpp  officeOperation.cpp  policy_checker.py  policy_shadow.py  sqlOperation.cpp  sql_executor.py  sql_parser.py  sql_policy_executor.cpp
DataCapsuleProject/backend/src/etcdServer/: main.cpp  server.cpp
DataCapsuleProject/backend/src/fileServer/: fileServer.cpp
DataCapsuleProject/backend/src/gateway/: main.cpp
DataCapsuleProject/backend/src/producer/: main.cpp  producer.cpp
DataCapsuleProject/backend/src/userServer/: main.cpp  server.cpp
(+440 files in other folders)
